Update to 1.21.2-pre2